Updated layout and fixed navbar bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  position: relative;
+  font-weight: normal;
+  overflow-x: hidden;
+  background-color: #08233b !important;
+  color:#fff !important;
+  scroll-behavior: smooth;
+}
+.card{
+  background-color: #08233b !important;
+  color:inherit !important;
+;
+}
+.nav-container{
+  top:0;
+  z-index: 9999;
+  background-color: #09263e !important;
+}
+a{
+  color: inherit !important;
+}
+.max-w-90{
+  max-width: 90% !important;
+}
+.rotate-hover{
+  transition: transform 0.5s ease-in-out;
+    display: inline-block;
+}
+.rotate-hover:hover{
+transform: translateY(-10px) scale(1.1);
+}
+footer{
+  background-color: #09263e !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
