--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,10 @@ body{
   font-weight: normal;
   overflow-x: hidden;
   /* background-color: #08233b !important; */
-  background-color: #090e1a !important;
+  /* background-color: #090e1a !important; */
   color:#fff !important;
   scroll-behavior: smooth;
+  background: linear-gradient(145deg, #0b0f1a, #141c2c) !important;
 }
 .card{
   background-color: #090e1a !important;
@@ -39,4 +40,9 @@ transform: translateY(-10px) scale(1.1);
 footer{
   background-color: #070a10 !important;
 }
-
+h2{
+  color: #00bcd4   !important
+}
+.about-setion, .skill-container, .hero-section, .contact-section, .project-section{
+  background-color: #0b0f1a !important;
+}
