Navbar active class

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,9 @@ h2{
 .about-setion, .skill-container, .hero-section, .contact-section, .project-section{
   background-color: #0b0f1a !important;
 }
+.navbar-nav a:hover{
+  color: #ddddd9 !important;
+}
+.navbar-nav a.active{
+  box-shadow: inset 0 -3px 0 0 #fff;
+}
