--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,17 @@ h2{
 .navbar-nav a.active{
   box-shadow: inset 0 -3px 0 0 #fff;
 }
+.nav-container .logo{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px; 
+}
+section{
+  scroll-margin-top: 60px;
+}
+@media only screen and (max-width: 992px) {
+  section {
+    scroll-margin-top: 220px;
+  }
+}
